ViewPager有时无法刷新有时能刷新，但其他功能都好用了

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">欧酷天气</string>
+    <string name="app_name">CJ天气</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
 
     <string name="text">~</string>
+    <string name="introduce">点我!点我!快点我!!</string>
 </resources>
