--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6,5 +6,5 @@
     <string name="action_settings">Settings</string>
 
     <string name="text">~</string>
-    <string name="introduce">点我!点我!快点我!!</string>
+    <string name="introduce">开 始 体 验</string>
 </resources>
