将APIlevel19改为23，4.4改到6.0，广告由有米（有米审核没过）改为万普，增加滑动提醒功能，将开机的蒲公英图片尺寸减小，否则有些机型会闪退，互动广告布局高度改成50dp不是自适应，原因加载不上来时变得快满全屏了，还增加了Umeng统计

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7,4 +7,5 @@
 
     <string name="text">~</string>
     <string name="introduce">开 始 体 验</string>
+    <string name="huadong">↓ 请左右滑动，获取未来天气！</string>
 </resources>
